force-app/main/default/objects/CD_Property__c/CD_Property__c.object-meta.xml
<CustomObject>
    <label>Unit</label>
    <nameField>
        <label>Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>