force-app/main/default/objects/CD_Property__c/fields/Actual_Holding_Days__c.field-meta.xml
<CustomField>
    <fullName>Actual_Holding_Days__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Red Listed&quot;) , TODAY() - CD_Block_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>when status is red listed, based on today and block date it shows Actual Holding Days</inlineHelpText>
    <label>Actual Holding Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>