force-app/main/default/objects/CD_Property__c/fields/Amount_Colleted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Colleted__c</fullName>
    <description>This is Formula percentange Field of  (Total Amount Paid/Final Net price)</description>
    <formula>Total_Amount_Paid__c/CD_Final_net_price__c</formula>
    <inlineHelpText>Need to fill Total Amount Paid and Final Net price field to get value.</inlineHelpText>
    <label>Amount Colleted (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>