force-app/main/default/objects/CD_Property__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aproval For Aproval Process</description>
    <label>Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>