force-app/main/default/objects/CD_Property__c/fields/CD_Address2__c.field-meta.xml
<CustomField>
    <fullName>CD_Address2__c</fullName>
    <formula>CD_Address_line_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address2</label>
    <type>Text</type>
</CustomField>