force-app/main/default/objects/CD_Property__c/fields/CD_Address_line_1__c.field-meta.xml
<CustomField>
    <fullName>CD_Address_line_1__c</fullName>
    <label>Address line 1</label>
    <type>TextArea</type>
</CustomField>