force-app/main/default/objects/CD_Property__c/fields/Cd_Agent_Name1__c.field-meta.xml
<CustomField>
    <fullName>Cd_Agent_Name1__c</fullName>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>