force-app/main/default/objects/CD_Property__c/fields/CD_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>CD_Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Name Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Unit (Agent Name Contact)</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>