force-app/main/default/objects/CD_Property__c/fields/Cd_Agent_Name_txt__c.field-meta.xml
<CustomField>
    <fullName>Cd_Agent_Name_txt__c</fullName>
    <formula>CD_Agent_Name_User__r.FirstName</formula>
    <label>Agent Name</label>
    <type>Text</type>
</CustomField>