force-app/main/default/objects/CD_Property__c/fields/CD_Agent_Name_User__c.field-meta.xml
<CustomField>
    <fullName>CD_Agent_Name_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>