force-app/main/default/objects/CD_Property__c/fields/CD_Agent_Representing_Client__c.field-meta.xml
<CustomField>
    <fullName>CD_Agent_Representing_Client__c</fullName>
    <label>Agent Representing Client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>