force-app/main/default/objects/CD_Property__c/fields/CD_Agent_Representing_Client_contact__c.field-meta.xml
<CustomField>
    <fullName>CD_Agent_Representing_Client_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Representing Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Properties3</relationshipName>
    <type>Lookup</type>
</CustomField>