force-app/main/default/objects/CD_Property__c/fields/CD_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>CD_Approval_Comments__c</fullName>
    <label>Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>