force-app/main/default/objects/CD_Property__c/fields/CD_Approver__c.field-meta.xml
<CustomField>
    <fullName>CD_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Properties_User</relationshipName>
    <type>Lookup</type>
</CustomField>