force-app/main/default/objects/CD_Property__c/fields/CD_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>CD_Approver_Name__c</fullName>
    <formula>CD_Approver__r.FirstName+ &apos; &apos; +CD_Approver__r.LastName</formula>
    <label>Approver Name</label>
    <type>Text</type>
</CustomField>