force-app/main/default/objects/CD_Property__c/fields/CD_Area__c.field-meta.xml
<CustomField>
    <fullName>CD_Area__c</fullName>
    <label>Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>