force-app/main/default/objects/CD_Property__c/fields/CD_Asking_Price_AED__c.field-meta.xml
<CustomField>
    <fullName>CD_Asking_Price_AED__c</fullName>
    <label>Asking Price AED</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>