force-app/main/default/objects/CD_Property__c/fields/CD_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CD_Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>