force-app/main/default/objects/CD_Property__c/fields/CD_Bathrooms_US__c.field-meta.xml
<CustomField>
    <fullName>CD_Bathrooms_US__c</fullName>
    <label>Bathrooms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>