force-app/main/default/objects/CD_Property__c/fields/CD_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>CD_Bedrooms__c</fullName>
    <label>Bedrooms</label>
    <length>100</length>
    <type>Text</type>
</CustomField>