force-app/main/default/objects/CD_Property__c/fields/CD_Block_Comments__c.field-meta.xml
<CustomField>
    <fullName>CD_Block_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>