force-app/main/default/objects/CD_Property__c/fields/CD_Block_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Block_Date__c</fullName>
    <label>Block Date</label>
    <type>Date</type>
</CustomField>