force-app/main/default/objects/CD_Property__c/fields/CD_Block_Status__c.field-meta.xml
<CustomField>
    <fullName>CD_Block_Status__c</fullName>
    <label>Block Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>