force-app/main/default/objects/CD_Property__c/fields/CD_Book_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Book_Date__c</fullName>
    <label>Book Date</label>
    <type>Date</type>
</CustomField>