force-app/main/default/objects/CD_Property__c/fields/CD_Brokerage_Representing_Client__c.field-meta.xml
<CustomField>
    <fullName>CD_Brokerage_Representing_Client__c</fullName>
    <label>Brokerage Representing Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>