force-app/main/default/objects/CD_Property__c/fields/CD_Brokerage_Representing_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>CD_Brokerage_Representing_Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokerage Representing Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Properties2</relationshipName>
    <type>Lookup</type>
</CustomField>