force-app/main/default/objects/CD_Property__c/fields/CD_Buyer_Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>CD_Buyer_Documents_Received__c</fullName>
    <label>Buyer Documents Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>