force-app/main/default/objects/CD_Property__c/fields/CD_City__c.field-meta.xml
<CustomField>
    <fullName>CD_City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>