force-app/main/default/objects/CD_Property__c/fields/CD_Client_Name1__c.field-meta.xml
<CustomField>
    <fullName>CD_Client_Name1__c</fullName>
    <label>Client Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>