force-app/main/default/objects/CD_Property__c/fields/CD_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>CD_Client_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>