force-app/main/default/objects/CD_Property__c/fields/CD_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>