force-app/main/default/objects/CD_Property__c/fields/CD_Completion_Status_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_Completion_Status_pb__c</fullName>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Announced</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>