force-app/main/default/objects/CD_Property__c/fields/CD_ContactPropertyOwner_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_ContactPropertyOwner_pb__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PropertyOwner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Propertys</relationshipName>
    <type>Lookup</type>
</CustomField>