force-app/main/default/objects/CD_Property__c/fields/CD_Convenyacing_fees__c.field-meta.xml
<CustomField>
    <fullName>CD_Convenyacing_fees__c</fullName>
    <label>Convenyacing fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>