force-app/main/default/objects/CD_Property__c/fields/CD_Country__c.field-meta.xml
<CustomField>
    <fullName>CD_Country__c</fullName>
    <label>Country</label>
    <type>TextArea</type>
</CustomField>