force-app/main/default/objects/CD_Property__c/fields/CD_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>CD_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>