force-app/main/default/objects/CD_Property__c/fields/CD_Date_the_RA_will_be_signed__c.field-meta.xml
<CustomField>
    <fullName>CD_Date_the_RA_will_be_signed__c</fullName>
    <label>Date the RA will be signed</label>
    <type>Date</type>
</CustomField>