force-app/main/default/objects/CD_Property__c/fields/CD_Description_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_Description_pb__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>