force-app/main/default/objects/CD_Property__c/fields/CD_Discount__c.field-meta.xml
<CustomField>
    <fullName>CD_Discount__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>