force-app/main/default/objects/CD_Property__c/fields/CD_External_Property_ID__c.field-meta.xml
<CustomField>
    <fullName>CD_External_Property_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Property ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>