force-app/main/default/objects/CD_Property__c/fields/CD_Final_net_price__c.field-meta.xml
<CustomField>
    <fullName>CD_Final_net_price__c</fullName>
    <formula>CD_Net_selling_price__c  -  CD_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final net price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>