force-app/main/default/objects/CD_Property__c/fields/CD_Floor__c.field-meta.xml
<CustomField>
    <fullName>CD_Floor__c</fullName>
    <label>Floor</label>
    <type>TextArea</type>
</CustomField>