force-app/main/default/objects/CD_Property__c/fields/CD_Floors__c.field-meta.xml
<CustomField>
    <fullName>CD_Floors__c</fullName>
    <label>Floors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>