force-app/main/default/objects/CD_Property__c/fields/CD_FullBathrooms__c.field-meta.xml
<CustomField>
    <fullName>CD_FullBathrooms__c</fullName>
    <label>Bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>