force-app/main/default/objects/CD_Property__c/fields/CD_gsir_master_Unit_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CD_gsir_master_Unit_External_Id__c</fullName>
    <label>Unit External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>