force-app/main/default/objects/CD_Property__c/fields/CD_gsir_User_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>CD_gsir_User_Full_Name__c</fullName>
    <formula>ENCODED:{!ID:Owner:User.FirstName} &amp; &quot; &quot; &amp; {!ID:Owner:User.LastName}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Full Name</label>
    <type>Text</type>
</CustomField>