force-app/main/default/objects/CD_Property__c/fields/CD_Half_Bathrooms_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_Half_Bathrooms_pb__c</fullName>
    <label>Half Bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>