force-app/main/default/objects/CD_Property__c/fields/CD_Image__c.field-meta.xml
<CustomField>
    <fullName>CD_Image__c</fullName>
    <label>Image</label>
    <type>Url</type>
</CustomField>