force-app/main/default/objects/CD_Property__c/fields/CD_Internal_Area__c.field-meta.xml
<CustomField>
    <fullName>CD_Internal_Area__c</fullName>
    <label>Internal Area</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>