force-app/main/default/objects/CD_Property__c/fields/CD_isblocked__c.field-meta.xml
<CustomField>
    <fullName>CD_isblocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isblocked</label>
    <type>Checkbox</type>
</CustomField>