force-app/main/default/objects/CD_Property__c/fields/CD_Latitude_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_Latitude_pb__c</fullName>
    <label>Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>