force-app/main/default/objects/CD_Property__c/fields/CD_Layout_Type__c.field-meta.xml
<CustomField>
    <fullName>CD_Layout_Type__c</fullName>
    <label>Layout Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Simplex</fullName>
            </value>
            <value>
                <fullName>Simplex - S</fullName>
            </value>
            <value>
                <fullName>Simplex - L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>