force-app/main/default/objects/CD_Property__c/fields/CD_Longitude_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_Longitude_pb__c</fullName>
    <label>Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>