force-app/main/default/objects/CD_Property__c/fields/CD_Main_Website_Image__c.field-meta.xml
<CustomField>
    <fullName>CD_Main_Website_Image__c</fullName>
    <label>Main Website Image</label>
    <type>Url</type>
</CustomField>