force-app/main/default/objects/CD_Property__c/fields/CD_Master_Property__c.field-meta.xml
<CustomField>
    <fullName>CD_Master_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Property</label>
    <referenceTo>CD_Property__c</referenceTo>
    <relationshipName>Propertys</relationshipName>
    <type>Lookup</type>
</CustomField>