force-app/main/default/objects/CD_Property__c/fields/CD_Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>CD_Mode_of_Payment__c</fullName>
    <label>Mode of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Cheque</fullName>
            </value>
            <value>
                <fullName>Managers Cheque</fullName>
            </value>
            <value>
                <fullName>Third Party Payment</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Not Yet Confirmed</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
                <isActive>false</isActive>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Cheque</fullName>
                <isActive>false</isActive>
                <label>Cheque</label>
            </value>
            <value>
                <fullName>Credit/Debit Card</fullName>
                <isActive>false</isActive>
                <label>Credit/Debit Card</label>
            </value>
            <value>
                <fullName>Net Banking</fullName>
                <isActive>false</isActive>
                <label>Net Banking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>