force-app/main/default/objects/CD_Property__c/fields/CD_Moving_Stage__c.field-meta.xml
<CustomField>
    <fullName>CD_Moving_Stage__c</fullName>
    <label>Moving Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moving</fullName>
            </value>
            <value>
                <fullName>Slow Moving</fullName>
            </value>
            <value>
                <fullName>Non Moving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>