force-app/main/default/objects/CD_Property__c/fields/CD_Net_selling_price__c.field-meta.xml
<CustomField>
    <fullName>CD_Net_selling_price__c</fullName>
    <formula>CD_Sales_Price__c  +  CD_VAT_5__c  +  CD_Convenyacing_fees__c  +  CD_Additional_fees__c  +  CD_Other_fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net selling price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>