force-app/main/default/objects/CD_Property__c/fields/CD_No_Parking_Spaces_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_No_Parking_Spaces_pb__c</fullName>
    <label>Parking Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>