force-app/main/default/objects/CD_Property__c/fields/CD_Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>CD_Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>CD_Property__c</referenceTo>
    <relationshipName>Building_Project</relationshipName>
    <type>Lookup</type>
</CustomField>