force-app/main/default/objects/CD_Property__c/fields/CD_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>CD_Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>