force-app/main/default/objects/CD_Property__c/fields/CD_Payment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CD_Payment_Percentage__c</fullName>
    <label>Payment Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>