force-app/main/default/objects/CD_Property__c/fields/CD_Price_Sq_ft_AED__c.field-meta.xml
<CustomField>
    <fullName>CD_Price_Sq_ft_AED__c</fullName>
    <label>Price/Sq.ft.</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>