force-app/main/default/objects/CD_Property__c/fields/CD_Price_sq_ft_AED_Internal_Area__c.field-meta.xml
<CustomField>
    <fullName>CD_Price_sq_ft_AED_Internal_Area__c</fullName>
    <label>Price/sq.ft - Internal Area</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>