force-app/main/default/objects/CD_Property__c/fields/CD_Project__c.field-meta.xml
<CustomField>
    <fullName>CD_Project__c</fullName>
    <label>Project</label>
    <referenceTo>CD_Project__c</referenceTo>
    <relationshipLabel>Unit</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>