force-app/main/default/objects/CD_Property__c/fields/CD_Property_owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>CD_Property_owner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PropertysOwnerContact</relationshipName>
    <type>Lookup</type>
</CustomField>