force-app/main/default/objects/CD_Property__c/fields/CD_Purchase_date__c.field-meta.xml
<CustomField>
    <fullName>CD_Purchase_date__c</fullName>
    <label>Purchase date</label>
    <type>Date</type>
</CustomField>