force-app/main/default/objects/CD_Property__c/fields/CD_Red_List_till_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Red_List_till_Date__c</fullName>
    <label>Red List till Date</label>
    <type>DateTime</type>
</CustomField>