force-app/main/default/objects/CD_Property__c/fields/CD_Reservation_Fees_be_Paid__c.field-meta.xml
<CustomField>
    <fullName>CD_Reservation_Fees_be_Paid__c</fullName>
    <label>% of Payment</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>