force-app/main/default/objects/CD_Property__c/fields/CD_Sales_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>CD_Sales_Agent_Name__c</fullName>
    <label>Sales Agent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>