force-app/main/default/objects/CD_Property__c/fields/CD_Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Sales_Date__c</fullName>
    <label>Sales Date</label>
    <type>Date</type>
</CustomField>