force-app/main/default/objects/CD_Property__c/fields/CD_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>CD_Sales_Price__c</fullName>
    <label>Sales Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>