force-app/main/default/objects/CD_Property__c/fields/CD_Second_Agent__c.field-meta.xml
<CustomField>
    <fullName>CD_Second_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Properties2</relationshipName>
    <type>Lookup</type>
</CustomField>