force-app/main/default/objects/CD_Property__c/fields/CD_Size_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_Size_pb__c</fullName>
    <label>Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>