force-app/main/default/objects/CD_Property__c/fields/CD_Split_Deal__c.field-meta.xml
<CustomField>
    <fullName>CD_Split_Deal__c</fullName>
    <label>Split Deal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>