force-app/main/default/objects/CD_Property__c/fields/CD_State_Code_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_State_Code_pb__c</fullName>
    <label>State Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>