force-app/main/default/objects/CD_Property__c/fields/CD_State_pb__c.field-meta.xml
<CustomField>
    <fullName>CD_State_pb__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>