force-app/main/default/objects/CD_Property__c/fields/CD_Stories__c.field-meta.xml
<CustomField>
    <fullName>CD_Stories__c</fullName>
    <label>Stories</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>