force-app/main/default/objects/CD_Property__c/fields/CD_System_Website_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CD_System_Website_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>System Website External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>