force-app/main/default/objects/CD_Property__c/fields/CD_Terrace_Area__c.field-meta.xml
<CustomField>
    <fullName>CD_Terrace_Area__c</fullName>
    <label>Terrace Area</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>