force-app/main/default/objects/CD_Property__c/fields/CD_Title__c.field-meta.xml
<CustomField>
    <fullName>CD_Title__c</fullName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>